[gd_scene load_steps=3 format=3 uid="uid://d2hoj6e4ao536"]

[ext_resource type="Script" path="res://ui/menus/mods/mods.gd" id="1_q5bn3"]
[ext_resource type="PackedScene" uid="uid://bwtjx2xrsrk7e" path="res://ui/menus/mods/mod_detail.tscn" id="2_lyxu1"]

[node name="Mods" type="CanvasLayer"]
script = ExtResource("1_q5bn3")
title = "Mods_Title"
size = Vector2(960, 450)

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HSplitContainer" type="HSplitContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_vertical = 3
split_offset = -100

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/HSplitContainer/VBoxContainer"]
layout_mode = 2

[node name="CheckBox" type="CheckBox" parent="PanelContainer/HSplitContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
disabled = true

[node name="ModName" type="Label" parent="PanelContainer/HSplitContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 20.0
text = "Mods_ModName"

[node name="ModVersion" type="Label" parent="PanelContainer/HSplitContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 10.0
text = "Mods_ModVersion"

[node name="LineEdit" type="LineEdit" parent="PanelContainer/HSplitContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Mods_Search"

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/HSplitContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/HSplitContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ModLines" type="VBoxContainer" parent="PanelContainer/HSplitContainer/VBoxContainer/ScrollContainer/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="InfoBody" type="ScrollContainer" parent="PanelContainer/HSplitContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ModDetail" parent="PanelContainer/HSplitContainer/PanelContainer/InfoBody" instance=ExtResource("2_lyxu1")]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="Alert" type="AcceptDialog" parent="."]
title = ""
initial_position = 2
always_on_top = true

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="text_changed" from="PanelContainer/HSplitContainer/VBoxContainer/LineEdit" to="." method="_on_line_edit_text_changed"]
